--- a/.htaccess
+++ b/.htaccess
@@ -55,9 +55,10 @@ RewriteRule ^tournament\/([A-Za-z0-9]+)(\/?)$ src/view/tournament.php?tournament
 RewriteRule ^login(\/?)$ src/view/login.php [NC,L]
 RewriteRule ^logout(\/?)$ src/view/logout.php [NC,L]
 RewriteRule ^register(\/?)$ src/view/register.php [NC,L]
-RewriteRule ^upload(\/?)$ scripts/upload.php [NC,L]
+RewriteRule ^upload(\/?)$ src/view/upload.php [NC,L]
 RewriteRule ^settings(\/?)$ src/view/settings.php [NC,L]
 RewriteRule ^t(\/?)$ src/view/tournament.php [NC,L]
 RewriteRule ^u(\/?)$ src/view/user.php?type=user [NC,L]
 RewriteRule ^store(\/?)$ src/view/store.php [NC,L]
+RewriteRule ^match(\/?)$ src/view/match.php [NC,L]
 RewriteRule ^([A-Za-z0-9]+)(\/?)$ src/view/user.php?type=$1 [NC,L]
