--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,5 @@
 RewriteEngine On
-# RewriteBase /tournament-api/
+# RewriteBase /git/tournament-api/
 
 RewriteCond %{REQUEST_FILENAME} !-f
 RewriteCond %{REQUEST_FILENAME} !-d
@@ -30,10 +30,14 @@ RewriteRule ^user\/([0-9]+)(\/?)$ src/view/user.php?user_id=$1 [NC,L]
 # SITE/user/[name]
 RewriteRule ^user\/([A-Za-z0-9]+)(\/?)$ src/view/user.php?user_name=$1 [NC,L]
 
+# SITE/store/command
+RewriteRule ^store\/add(\/?)$ src/view/store.php?action=add [NC,L]
+RewriteRule ^store\/update(\/?)$ src/view/store.php?action=update [NC,L]
+RewriteRule ^store\/mine(\/?)$ src/view/store.php?action=mine [NC,L]
 # SITE/store/[id]
-RewriteRule ^store\/([0-9]+)(\/?)$ src/view/store.php?store_id=$1 [NC,L]
+RewriteRule ^store\/([0-9]+)(\/?)$ src/view/store.php?action=get&store_id=$1 [NC,L]
 # SITE/user/[name]
-RewriteRule ^store\/([A-Za-z0-9]+)(\/?)$ src/view/store.php?vanity_url=$1 [NC,L]
+RewriteRule ^store\/([A-Za-z0-9]+)(\/?)$ src/view/store.php?action=get&vanity_url=$1 [NC,L]
 #   ^               START
 #   user\/          Must be in this category and have a /.
 #   ([^\/\n\r]+)    AT LEAST 1: Not / or whitespace.
@@ -42,6 +46,8 @@ RewriteRule ^store\/([A-Za-z0-9]+)(\/?)$ src/view/store.php?vanity_url=$1 [NC,L]
 #   (\/?)           Optional /
 #   $               END
 
+# SITE/tournament/command
+RewriteRule ^tournament\/upload(\/?)$ src/view/tournament/upload.php [NC,L]
 # SITE/tournament/[id]
 RewriteRule ^tournament\/([0-9]+)(\/?)$ src/view/tournament.php?tournament_id=$1 [NC,L]
 # SITE/tournament/[name]
@@ -55,10 +61,13 @@ RewriteRule ^tournament\/([A-Za-z0-9]+)(\/?)$ src/view/tournament.php?tournament
 RewriteRule ^login(\/?)$ src/view/login.php [NC,L]
 RewriteRule ^logout(\/?)$ src/view/logout.php [NC,L]
 RewriteRule ^register(\/?)$ src/view/register.php [NC,L]
-RewriteRule ^upload(\/?)$ src/view/upload.php [NC,L]
 RewriteRule ^settings(\/?)$ src/view/settings.php [NC,L]
 RewriteRule ^t(\/?)$ src/view/tournament.php [NC,L]
+RewriteRule ^tournament(\/?)$ src/view/tournament.php [NC,L]
 RewriteRule ^u(\/?)$ src/view/user.php?type=user [NC,L]
+RewriteRule ^user(\/?)$ src/view/user.php?type=user [NC,L]
 RewriteRule ^store(\/?)$ src/view/store.php [NC,L]
 RewriteRule ^match(\/?)$ src/view/match.php [NC,L]
-RewriteRule ^([A-Za-z0-9]+)(\/?)$ src/view/user.php?type=$1 [NC,L]
+RewriteRule ^player(\/?)$ src/view/player.php [NC,L]
+RewriteRule ^auth(\/?)$ src/view/auth.php [NC,L]
+#RewriteRule ^([A-Za-z0-9]+)(\/?)$ src/view/user.php?type=$1 [NC,L]
