--- a/.htaccess
+++ b/.htaccess
@@ -61,4 +61,4 @@ RewriteRule ^store(\/?)$ src/view/store.php?action=get [NC,L]
 RewriteRule ^match(\/?)$ src/view/match.php [NC,L]
 RewriteRule ^player(\/?)$ src/view/player.php [NC,L]
 RewriteRule ^auth(\/?)$ src/view/auth.php [NC,L]
-#RewriteRule ^([A-Za-z0-9]+)(\/?)$ src/view/user.php?type=$1 [NC,L]
+##RewriteRule ^([A-Za-z0-9]+)(\/?)$ src/view/user.php?type=$1 [NC,L]
