--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,8 @@
     "require": {
       "php": ">=5.3.3",
       "aws/aws-sdk-php": "~2.6"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "5.5.*"
     }
 }
