--- a/.htaccess
+++ b/.htaccess
@@ -12,21 +12,41 @@ RewriteCond %{REQUEST_FILENAME} !-d
 # LEVEL THREE
 #
 
+# store/[id]/command
+RewriteRule ^store\/([0-9]+)\/tournaments(\/?)$ src/view/tournament.php?action=get_by_store&store_id=$1 [NC,L]
+# store/[vanity_url]/command
+RewriteRule ^store\/([A-Za-z0-9]+)\/tournaments(\/?)$ src/view/tournament.php?action=get_by_store&store_vanity_url=$1 [NC,L]
+
+# store/[id]/[tournament_id]
+RewriteRule ^store\/([0-9]+)\/([0-9]+)(\/?)$ src/view/tournament.php?action=get_by_store&store_id=$1&tournament_id=$2 [NC,L]
+# store/[id]/[tournament_vanity_url]
+RewriteRule ^store\/([0-9]+)\/([A-Za-z0-9]+)(\/?)$ src/view/tournament.php?action=get_by_store&store_id=$1&tournament_vanity_url=$2 [NC,L]
+# store/[vanity_url]/[tournament_vanity_url]
+RewriteRule ^store\/([A-Za-z0-9]+)\/([0-9]+)(\/?)$ src/view/tournament.php?action=get_by_store&store_vanity_url=$1&tournament_vanity_url=$2 [NC,L]
+# store/[vanity_url]/[tournament_vanity_url]
+RewriteRule ^store\/([A-Za-z0-9]+)\/([A-Za-z0-9]+)(\/?)$ src/view/tournament.php?action=get_by_store&store_vanity_url=$1&tournament_vanity_url=$2 [NC,L]
+
+
+# store/[id]/[tournament_id]
+#RewriteRule ^store\/([0-9]+)\/([0-9]+)(\/?)$ src/view/tournament.php?action=get&store_id=$1&tournament_id=$2 [NC,L]
+# store/[id]/[tournament_vanity_url]
+#RewriteRule ^store\/([0-9]+)\/([A-Za-z0-9]+)(\/?)$ src/view/tournament.php?action=get&store_id=$1&tournament_vanity_url=$2 [NC,L]
+
 #
 # LEVEL TWO
 #
 
-# SITE/user/command
+# user/command
 RewriteRule ^user\/self(\/?)$ src/view/user.php?action=self [NC,L]
-RewriteRule ^user\/update(\/?)$ src/view/user.php?action=update [NC,L]
-# SITE/user/[id]
+RewriteRule ^user\/update(\/?)$ src/view/user/update.php [NC,L]
+# user/[id]
 RewriteRule ^user\/([0-9]+)(\/?)$ src/view/user.php?action=get&user_id=$1 [NC,L]
-# SITE/user/[name]
+# user/[name]
 RewriteRule ^user\/([A-Za-z0-9]+)(\/?)$ src/view/user.php?action=get&user_name=$1 [NC,L]
 
 # SITE/store/command
 RewriteRule ^store\/add(\/?)$ src/view/store.php?action=add [NC,L]
-RewriteRule ^store\/update(\/?)$ src/view/store.php?action=update [NC,L]
+RewriteRule ^store\/update(\/?)$ src/view/store/update.php [NC,L]
 RewriteRule ^store\/mine(\/?)$ src/view/store.php?action=mine [NC,L]
 # SITE/store/[id]
 RewriteRule ^store\/([0-9]+)(\/?)$ src/view/store.php?action=get&store_id=$1 [NC,L]
@@ -42,10 +62,12 @@ RewriteRule ^store\/([A-Za-z0-9]+)(\/?)$ src/view/store.php?action=get&vanity_ur
 
 # SITE/tournament/command
 RewriteRule ^tournament\/upload(\/?)$ src/view/tournament/upload.php [NC,L]
+RewriteRule ^tournament\/mine(\/?)$ src/view/tournament.php?action=mine [NC,L]
+RewriteRule ^tournament\/recent(\/?)$ src/view/tournament/recent.php [NC,L]
 # SITE/tournament/[id]
-RewriteRule ^tournament\/([0-9]+)(\/?)$ src/view/tournament.php?tournament_id=$1 [NC,L]
+RewriteRule ^tournament\/([0-9]+)(\/?)$ src/view/tournament.php?action=get&tournament_id=$1 [NC,L]
 # SITE/tournament/[name]
-RewriteRule ^tournament\/([A-Za-z0-9]+)(\/?)$ src/view/tournament.php?tournament_vanity_url=$1 [NC,L]
+RewriteRule ^tournament\/([A-Za-z0-9]+)(\/?)$ src/view/tournament.php?action=get&tournament_vanity_url=$1 [NC,L]
 
 #
 # LEVEL ONE
@@ -55,8 +77,9 @@ RewriteRule ^tournament\/([A-Za-z0-9]+)(\/?)$ src/view/tournament.php?tournament
 RewriteRule ^login(\/?)$ src/view/login.php [NC,L]
 RewriteRule ^logout(\/?)$ src/view/logout.php [NC,L]
 RewriteRule ^register(\/?)$ src/view/register.php [NC,L]
+RewriteRule ^search(\/?)$ src/view/search.php [NC,L]
 RewriteRule ^settings(\/?)$ src/view/settings.php [NC,L]
-RewriteRule ^tournament(\/?)$ src/view/tournament.php [NC,L]
+RewriteRule ^tournament(\/?)$ src/view/tournament.php?action=get [NC,L]
 RewriteRule ^user(\/?)$ src/view/user.php?action=get [NC,L]
 RewriteRule ^store(\/?)$ src/view/store.php?action=get [NC,L]
 RewriteRule ^match(\/?)$ src/view/match.php [NC,L]
